--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
 
     <div id="output"></div>
     <script src="hodorspeak.js" type="text/Javascript"></script>
+    <footer style="text-align : center;
+bottom: 0; 
+width: 100%;
+
+position: absolute;
+margin-top: auto;
+background-color: teal;"><hr>
+    <div style="font-size: x-large; display: inline;   word-spacing: 100px;">
+   <a href="https://github.com/ignoreandfly">Github</a>
+      <a href="https://www.linkedin.com/in/siddhant-bharadwaj-014700221">Linkedin</a>
+          <a href="https://www.twitter.com/ignoreandfly">Twitter</a>
+ </footer> </div>
 
 </body>
 
